# ai-trim-engine

./: .gitignore  ARCHITECTURE.md  README.md  editor_profile.yml  install.sh  pyproject.toml
frontend_demo/: index.html  script.js  style.css
prompts/: critic.md  importance_scorer.md  intent_compiler.md  kb_answer.md  planner.md  profile_classifier.md  query_expansion.md  smoke.md  story_mapper.md  topic_segmenter.md  vision_tagger.md
sample_outputs/: README.md
sample_outputs/prompt_01/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_02/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_03/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_04/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_05/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_06/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_07/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_08/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_09/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_10/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_11/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_12/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_13/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_14/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_15/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
sample_outputs/prompt_16/: intent.json  plan_summary.json  prompt.txt  report.json  report.md  verdict.json
tests/: test_e2e_suite.py  test_planner.py  test_renderer.py
trim_engine/: __init__.py  api.py  cli.py  config.py  db.py  llm.py  schemas.py  shell.py
(+84 files in other folders)
